--- a/term/fish.org
+++ b/term/fish.org
@@ -8,6 +8,7 @@
 :PROPERTIES:
 :header-args: :tangle ~/.config/fish/config.fish :comments both :mkdirp yes :noweb tangle
 :END:
+** Behaviour
 Use vim key bindings.
 #+BEGIN_SRC sh
 fish_vi_key_bindings
@@ -22,9 +23,11 @@ if not functions -q fisher
 end
 #+END_SRC
 
-add ~/bin to path
+add following folders to the path
 #+BEGIN_SRC sh
 set PATH ~/bin $PATH
+set PATH ~/.local/bin $PATH
+set PATH ~/.cargo/bin $PATH
 #+END_SRC
 
 make abbrevations private to a particular fish session
@@ -35,6 +38,14 @@ set -g fish_user_abbreviations
 set aliases
 #+BEGIN_SRC sh
 alias ssh 'env TERM=xterm ssh'
+alias cat 'bat'
+alias ls 'exa'
+alias top 'ytop'
+alias rm 'echo "Use \'del\', or the full path i.e. \'/bin/rm\'"'
+alias rmdir 'echo "Use \'deldir\', or the full path i.e. \'/bin/rmdir\'"'
+alias del 'rmtrash'
+alias deldir 'rmdirtrash'
+thefuck --alias | source
 #+END_SRC
 
 set abbrevations
@@ -56,11 +67,52 @@ abbr gs 'git status'
 abbr gl 'git log'
 abbr ga 'git add'
 abbr gc 'git commit'
-abbr gd 'git difftool'
+abbr gd 'git difftool --dir-diff'
 
 abbr dnf 'sudo dnf'
+abbr pacman 'sudo pacman'
 abbr mount 'sudo mount'
 abbr umount 'sudo umount'
+#+END_SRC
+
+Suppress fish greeting
+#+BEGIN_SRC sh
+set fish_greeting ''
+#+END_SRC
+
+Use =starship= as a prompt
+#+BEGIN_SRC sh
+starship init fish | source
+#+END_SRC
+
+** Colors
+#+BEGIN_SRC sh
+set -g fish_color_autosuggestion brblack
+set -g fish_color_cancel -r
+set -g fish_color_command --bold white
+set -g fish_color_comment brblack
+set -g fish_color_cwd green
+set -g fish_color_cwd_root red
+set -g fish_color_end brblack
+set -g fish_color_error red
+set -g fish_color_escape yellow
+set -g fish_color_history_current --bold
+set -g fish_color_host white
+set -g fish_color_match --background=brblack
+set -g fish_color_normal white
+set -g fish_color_operator blue
+set -g fish_color_param white
+set -g fish_color_quote green
+set -g fish_color_redirection cyan
+set -g fish_color_search_match yellow --background=brblack
+set -g fish_color_selection white --bold --background=brblack
+set -g fish_color_status red
+set -g fish_color_user green
+set -g fish_color_valid_path --underline
+set -g fish_pager_color_completion normal
+set -g fish_pager_color_description yellow --dim
+set -g fish_pager_color_prefix white --bold
+set -g fish_pager_color_progress black --bold --background=blue
 #+END_SRC
 
 * Functions
@@ -96,7 +148,7 @@ Fisher is fish package manager.
 ** Pure
 Minimal prompt for fish.
 #+BEGIN_SRC conf
-rafaelrinaldi/pure
+#rafaelrinaldi/pure
 #+END_SRC
 
 ** Done
@@ -108,5 +160,5 @@ franciscolourenco/done
 ** Pisces
 helps you to work with paired symbols in the command line
 #+BEGIN_SRC conf
-laughedelic/pisces
+#laughedelic/pisces
 #+END_SRC
