Change tmux colors

--- a/term/tmux.org
+++ b/term/tmux.org
@@ -6,6 +6,8 @@
 #+PROPERTY: header-args+ :noweb tangle
 #+OPTIONS: prop:t
 
+#+INCLUDE: "../variables.org"
+
 * General
 set fish as a default shell
 #+BEGIN_SRC conf
@@ -114,8 +116,8 @@ set -g status-interval 1
 
 Basic status bar colors
 #+BEGIN_SRC conf
-set -g status-fg colour21
-set -g status-bg colour18
+set -g status-fg "<<base06>>"
+set -g status-bg "<<base01>>"
 #+END_SRC
 
 Left side of status bar
@@ -129,13 +131,13 @@ Right side of status bar
 #+BEGIN_SRC conf
 set -g status-right bg=default,fg=default
 set -g status-right-length 150
-set -g status-right "#[fg=colour18,bg=colour07,bold] #S "
+set -g status-right "#[fg=<<base01>>,bg=<<base06>>,bold] #S "
 #+END_SRC
 
 Window status
 #+BEGIN_SRC conf
 set -g window-status-format " #W "
-set -g window-status-current-format "#[fg=colour18,bg=colour04] #W "
+set -g window-status-current-format "#[fg=<<base01>>,bg=<<base0D>>] #W "
 #+END_SRC
 
 Current window status
@@ -160,12 +162,12 @@ set -g status-justify left
 
 Pane border
 #+BEGIN_SRC conf
-set -g pane-border-style bg=default,fg=colour18
+set -g pane-border-style bg=default,fg="<<base01>>"
 #+END_SRC
 
 Active pane border
 #+BEGIN_SRC conf
-set -g pane-active-border-style bg=default,fg=colour04
+set -g pane-active-border-style bg=default,fg="<<base0D>>"
 #+END_SRC
 
 Pane number indicator
@@ -176,21 +178,21 @@ set -g display-panes-active-colour default
 
 Clock mode
 #+BEGIN_SRC conf
-set -g clock-mode-colour colour04
+set -g clock-mode-colour "<<base0D>>"
 set -g clock-mode-style 12
 #+END_SRC
 
 Message
 #+BEGIN_SRC conf
-set -g message-style bg=colour16,fg=colour18
+set -g message-style bg="<<base06>>",fg="<<base01>>"
 #+END_SRC
 
 Command message
 #+BEGIN_SRC conf
-set -g message-command-style bg=colour16,fg=colour18
+set -g message-command-style bg="<<base06>>",fg="<<base01>>"
 #+END_SRC
 
 Mode
 #+BEGIN_SRC conf
-set -g mode-style bg=colour19,fg=colour18
+set -g mode-style bg="<<base06>>",fg="<<base01>>"
 #+END_SRC
