--- a/term/ncmpcpp.org
+++ b/term/ncmpcpp.org
@@ -47,13 +47,13 @@ visualization or 44100:16:2 for stereo visualization. Example configuration
 #+END_SRC
 
 #+BEGIN_SRC conf
-visualizer_fifo_path = /tmp/mpd.fifo
+visualizer_data_source = localhost:5555
 #+END_SRC
 Note: Below parameter is needed for ncmpcpp to determine which output
 provides data for visualizer and thus allow syncing between visualization and
 sound as currently there are some problems with it.
 #+BEGIN_SRC conf
-visualizer_output_name = visualizer_fifo
+visualizer_output_name = Visualizer feed
 #+END_SRC
 If you set format to 44100:16:2, make it 'yes'.
 #+BEGIN_SRC conf
@@ -64,7 +64,7 @@ visualizer and audio outputs.  30 seconds is optimal value, but if you
 experience synchronization problems, set it to lower value.  Keep in mind
 that sane values start with >=10.
 #+BEGIN_SRC conf
-visualizer_sync_interval = 30
+#visualizer_sync_interval = 30
 #+END_SRC
 Note: To enable spectrum frequency visualization you need to compile ncmpcpp
 with fftw3 support.
@@ -72,6 +72,7 @@ Available values: spectrum, wave, wave_filled, ellipse.
 #+BEGIN_SRC conf
 visualizer_type = spectrum
 visualizer_look = +|
+visualizer_spectrum_smooth_look = no
 #visualizer_color = blue, cyan, green, yellow, magenta, red
 #+END_SRC
 Alternative subset of 256 colors for terminals that support it.
