--- a/README.org
+++ b/README.org
@@ -7,6 +7,7 @@ Repository contains following configuration files:
   - [[file:editor/emacs.org][Emacs]]
   - +[[file:editor/vim.org][Vim]]+
 - Music
+  - [[file:music/beets.org][beets]]
   - [[file:music/mopidy.org][Mopidy]]
   - +[[file:music/mpd.org][MPD]]+
   - [[file:music/ncmpcpp.org][ncmpcpp]]
