--- a/README.org
+++ b/README.org
@@ -5,6 +5,7 @@ Repository contains following configuration files:
 - Editor
   - [[file:editor/editorconfig.org][EditorConfig]]
   - [[file:editor/emacs.org][Emacs]]
+  - [[file:editor/idea.org][IntelliJ IDEA]]
   - +[[file:editor/vim.org][Vim]]+
 - Music
   - [[file:music/beets.org][beets]]
