Export locations of XDG base directories

--- a/term/bash.org
+++ b/term/bash.org
@@ -52,6 +52,9 @@ Set environment variables
 export VISUAL='emacsclient -c -a emacs'
 export _JAVA_AWT_WM_NONREPARENTING='1'
 export MANPAGER="sh -c 'col -bx | bat -l man -p'"
+export XDG_CONFIG_HOME="${HOME}/.config"
+export XDG_CACHE_HOME="${HOME}/.cache"
+export XDG_DATA_HOME="${HOME}/.local/share"
 #+END_SRC
 
 Source =~/.bashrc=
